<resources>

    <string name="app_name">Movies</string>

    <!-- MOVIE LIST -->
    <string name="image_description">Movie poster</string>
    <string name="empty_view_message">Something went wrong!!\nThere are no movies to show :(</string>

    <!-- MOVIE MENU -->
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorite">Favorite</string>

    <string name="user_rating_label">User Rating</string>
    <string name="release_date_label">Release Date</string>
    <string name="synopsis_label">Synopsis</string>
    <string name="reviews_label">Reviews</string>
    <string name="trailers_label">Trailers</string>

    <string name="Error_NoMovieData">No Movie data</string>

    <!-- MOVIE DETAIL -->
    <string name="synopsis_title">OverView</string>

    <!-- MOVIE API DETAIL -->
    <string name="base_url">https://api.themoviedb.org/3/</string>
    <string name="image_url">http://image.tmdb.org/t/p/w500</string>
    <string name="url">https://api.themoviedb.org/3/movie/popular?api_key={YOUR API KEY HERE}&amp;language=en-US&amp;page=1</string>
    <string name="YOUTUBE_BASE_IMAGE_URL" translatable="false">"http://img.youtube.com/vi/"</string>
    <string name="YOUTUBE_BASE_VIDEO_URL" translatable="false">"https://youtube.com/watch?v="</string>
    <string name="YOUTUBE_IMAGE_EXTENSION" translatable="false">"/mqdefault.jpg"</string>

    <!--Shared Preferences key-->
    <string name="pref_sort_key">sort_order</string>
    <string name="pref_changed_movie" >changed_movie</string>

    <!--Menu item name for sorting spinner-->
    <string name="action_sort">Sorting</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>

    <string name="cd_movie_item">Movie Poster</string>
    <string name="cd_video">Video</string>
    <string name="cd_favorite">Favorite</string>
    <string name="cd_more">Expand More</string>
    <string name="cd_status">Status</string>

    <string name="language">en-US</string>

    <!--For Detail Activity-->
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Score</string>
    <string name="user_rating_text" translatable="false">%1$s / 10</string>
    <string name="plot_synopsis">Overview</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>

    <string name="no_internet">No internet connection, swipe to refresh</string>
    <string name="no_favorite">To add a movie to favorites, tap star</string>
    <string name="not_this_star">Not this star. Tap star on poster or detail page.</string>
    <string name="no_app">There is not any sharing app installed on device</string>

    <string name="view_more">READ MORE</string>
    <string name="connection_error">Connection Error</string>

    <!--For About Activity-->
    <string name="description">This product uses TMDb API.\nDeveloped by Ahmet Türk</string>

    <string name="movie_transition">movie_transition</string>
    <string name="review_transition">review_transition</string>


    <string name="Favorite_Removed">Movie removed from favorites</string>
    <string name="Favorite_Added">Movie added to favorites</string>
    <string name="FavoritesNotFound">No favorite Movies Found</string>

    <string name="no_description_available">No Description Available</string>
    <string name="no_review_available">No Review Available</string>
    <string name="movie_content_description">movieImage</string>

</resources>
