<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/img_movie_cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/movie_icon" />

        <ImageView
            android:id="@+id/img_movie_poster"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:padding="2dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_favButton"
            tools:src="@drawable/movie_icon" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/DetailsHeading"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:autoSizeMinTextSize="18sp"
            android:maxLines="3"
            android:text="titldggfgfggffgfgf"
            app:layout_constraintStart_toEndOf="@+id/img_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/iv_favButton" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/DetailsHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="realese date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_user_rating"
            style="@style/DetailsHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="rating vote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <RatingBar
            android:id="@+id/rbv_user_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:numStars="10"
            app:layout_constraintStart_toEndOf="@+id/img_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_rating" />

        <TextView
            android:id="@+id/tv_synopsis_title"
            style="@style/Heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="16dp"
            android:paddingTop="5dp"
            android:text="@string/synopsis_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_movie_poster" />

        <TextView
            android:id="@+id/tv_synopsis"
            style="@style/Details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="5dp"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis_title"
            tools:text="hello this is overview" />

        <TextView
            android:id="@+id/tv_header_trailers"
            style="@style/Heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="16dp"
            android:paddingTop="5dp"
            android:text="@string/trailers_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

        <TextView
            android:id="@+id/tv_trailers"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_trailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers"></android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_header_reviews"
            style="@style/Heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:text="@string/reviews_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_reviews">
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_reviews_not_available"
            style="@style/Details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:text="@string/no_review_available"
            android:visibility="gone"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_reviews" />

        <ImageView
            android:id="@+id/iv_favButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/img_movie_cover"
            tools:src="@drawable/ic_favorite_solid_24dp" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>